<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_main_page"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/mainPage" />

    <item
        android:id="@+id/navigation_booked_room"
        android:icon="@drawable/orders"
        android:title="@string/bookedRoom" />

    <item
        android:id="@+id/navigation_bought_procedures"
        android:icon="@drawable/orders"
        android:title="@string/boughtProcedures" />

    <item android:title="@string/others">

        <menu>

            <item
                android:id="@+id/navigation_info"
                android:icon="@drawable/info"
                android:title="@string/about" />

            <item
                android:id="@+id/navigation_settings"
                android:icon="@drawable/settings"
                android:title="@string/settings" />

        </menu>

    </item>

</menu>